--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,8 +33,7 @@ Imports:
     scico,
     tidyr,
     SpatialExperiment,
-    SingleCellExperiment,
-    ExperimentList
+    SingleCellExperiment
 RoxygenNote: 7.1.2
 Suggests: 
     testthat (>= 3.0.0),
