--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,10 @@
 export(createDSProject)
 export(explorePCVariability)
 export(getCytoscapeLayout)
+export(getPCVariability)
 export(plotMDS)
 export(plotPCA)
+export(plotPCAbiplot)
 export(plotRLE)
 export(plotSpotAnnotation)
 export(plotSpotExpression)
